<resources>
    <string name="app_name">loginServices</string>
    <string name="password">비밀번호</string>
    <string name="name">아이디</string>
    <string name="input_id">아이디를 입력하세요.</string>
    <string name="input_password">비밀번호를 입력하세요.</string>
    <string name="login_button">로그인</string>
    <string name="register_button">회원가입</string>
    <string name="name_edit">이름을 입력하세요.</string>
    <string name="name_text">이름</string>
    <string name="close">종료</string>
</resources>