<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/titleImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_emoji_people_24"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:text="@string/name_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name_edit"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/idEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idTextView"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_id"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/idEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/passwordEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/openButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/register_button"
        android:background="@drawable/button_background2"/>

</androidx.constraintlayout.widget.ConstraintLayout>