<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/titleImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_android_black_24dp"
        android:layout_marginTop="25dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/idEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idTextView"
        android:layout_marginHorizontal="25dp"
        android:inputType="text"
        android:layout_marginTop="16dp"
        android:hint="@string/input_id"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/idEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/passwordEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="40dp"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/login_button"
        android:background="@drawable/button_background3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/register_button"
        android:background="@drawable/button_background2"/>

</androidx.constraintlayout.widget.ConstraintLayout>